# chomp

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: chomp.yaml
include/chomp/: Chomp.h
include/cost_map/: CostMap.h
src/: chomp.cpp
src/cost_map/: CostMap.cpp
